RESOLVED FIXED 49638
[chromium] REGRESSION(72141): Chromium fails acid3 on windows and linux
https://bugs.webkit.org/show_bug.cgi?id=49638
Summary [chromium] REGRESSION(72141): Chromium fails acid3 on windows and linux
James Robinson
Reported 2010-11-16 18:46:02 PST
http://trac.webkit.org/changeset/72141 fixed a pair of bugs in font-size and line height handling and requires that the default minimum font size be changed from 1 to 0. The patch at http://codereview.chromium.org/4954002/ changes the default minimum values (except for Chromium DumpRenderTree, which needs http://trac.webkit.org/browser/trunk/WebKitTools/DumpRenderTree/chromium/WebPreferences.cpp#L68 to be edited) but we still render the 100/100 text at slightly the wrong offset in Chromium linux. I haven't tested Chromium mac/windows yet. CC'ing a bunch of font people randomly to see if anyone knows what's up. We might just be clamping 0 to a nonzero value somewhere badly.
Attachments
Patch (4.13 KB, patch)
2010-11-17 13:11 PST, James Robinson
no flags
Patch (5.30 KB, patch)
2010-11-18 11:34 PST, James Robinson
fishd: review+
James Robinson
Comment 1 2010-11-16 18:49:37 PST
We pass on Chromium mac with that patch applied, so this is a linux/possibly windows regression only.
James Robinson
Comment 2 2010-11-17 13:11:54 PST
James Robinson
Comment 3 2010-11-17 13:14:07 PST
Patch requires that http://codereview.appspot.com/3174041/ land in Skia and get rolled in.
James Robinson
Comment 4 2010-11-18 11:34:48 PST
James Robinson
Comment 5 2010-11-18 12:10:53 PST
WebKit Review Bot
Comment 6 2010-11-18 12:40:14 PST
http://trac.webkit.org/changeset/72324 might have broken Qt Linux Release
Note You need to log in before you can comment on or make changes to this bug.