2010-11-18  James Robinson  <jamesr@chromium.org>

Reviewed by Darin Fisher.

        [chromium] REGRESSION(72141): Chromium fails acid3 on windows and linux
        https://bugs.webkit.org/show_bug.cgi?id=49638

        Adds a test checking that the bounding client rect of a text run with font-size:0
        has zero height.  This is also covered by acid3, but an isolated test case is easier
        to work with.

        * fast/text/font-size-zero-expected.txt: Added.
        * fast/text/font-size-zero.html: Added.
        * fast/text/script-tests/font-size-zero.js: Added.
2010-11-18  James Robinson  <jamesr@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] REGRESSION(72141): Chromium fails acid3 on windows and linux
        https://bugs.webkit.org/show_bug.cgi?id=49638

        Avoid clamping zero text size to 12pt in FontPlatformData::setupPaint() in FontPlatformDataLinux.cpp
        Set all metrics to 0 if the font size is specified as zero in SimpleFontDataChromiumWin.cpp, just
        like Safari Win did in r72270.

        Test: fast/text/font-size-zero.html

        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
        (WebCore::FontPlatformData::setupPaint):
        * platform/graphics/chromium/SimpleFontDataChromiumWin.cpp:
        (WebCore::SimpleFontData::platformInit):

Canonical link: https://commits.webkit.org/62786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72324 268f45cc-cd09-0410-ab3c-d52691b4dbfc