LayoutTests/fast/text/script-tests/font-size-zero.js
@@ -1,0 +1,10 @@
+var s = document.createElement('span');
+s.style.fontSize = 0;
+s.innerHTML = 'Text';
+document.body.appendChild(s);
+
+shouldBe("s.getBoundingClientRect().height", "0");
+
+document.body.removeChild(s);
+
+var successfullyParsed = true;
